--- a/WebPamyatajka/Views/Shared/Error.cshtml
+++ b/WebPamyatajka/Views/Shared/Error.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Помилка.</h1>
+<h2 class="text-danger">Відбулась помилка під час обробки вашого запиту.</h2>
 
 @if (Model.ShowRequestId)
 {
