--- a/WebPamyatajka/wwwroot/css/site.css
+++ b/WebPamyatajka/wwwroot/css/site.css
@@ -16,3 +16,60 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.category-tiles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.category-tile {
+  width: 300px;
+  height: 200px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+  position: relative;
+}
+
+.category-tile:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+
+.category-tile .category-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  padding: 20px;
+  text-align: center;
+}
+
+.category-tile .button-container {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  padding: 0 20px;
+}
+
+.category-tile .button-container button {
+  width: 48%;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+}
+
+.category-tile .button-container button.learn {
+  background-color: #007bff;
+}
+
+.category-tile .button-container button.review {
+  background-color: #ffc107;
+}
