--- a/WebPamyatajka/Views/Home/Privacy.cshtml
+++ b/WebPamyatajka/Views/Home/Privacy.cshtml
@@ -1,6 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Про нас";
 }
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div>
+    <p>Ми команда експертів, яка працює над розробкою інноваційного програмного забезпечення та рішень. Наша мета - надати користувачам потужні та інтуїтивно зрозумілі інструменти, що полегшують їх повсякденну роботу та розвиток.</p>
+
+    <p>Ми спеціалізуємося на розробці високоякісних програмних продуктів, веб-додатків, мобільних додатків та штучного інтелекту. Наші професіонали мають багаторічний досвід у сфері програмування та розробки інноваційних рішень.</p>
+
+    <p>Наша команда працює в тісному співробітництві з клієнтами, враховуючи їх потреби та вимоги, щоб забезпечити найкращі результати. Ми пишаємося нашими досягненнями та задоволенням наших клієнтів.</p>
+
+    <p>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою контактних даних, наведених нижче.</p>
+</div>
