change about us page

--- a/WebPamyatajka/Views/Home/Privacy.cshtml
+++ b/WebPamyatajka/Views/Home/Privacy.cshtml
@@ -1,15 +1,58 @@
 ﻿@{
     ViewData["Title"] = "Про нас";
 }
+<style>
+    .about-container {
+        width: 80%;
+        margin: 0 auto;
+    }
 
-<h1>@ViewData["Title"]</h1>
+    .about-text {
+        text-align: justify;
+        text-justify: inter-word;
+        margin-bottom: 1.5em;
+        text-indent: 1.5em;
+    }
 
-<div>
-    <p>Ми команда експертів, яка працює над розробкою інноваційного програмного забезпечення та рішень. Наша мета - надати користувачам потужні та інтуїтивно зрозумілі інструменти, що полегшують їх повсякденну роботу та розвиток.</p>
+    .about-title {
+        text-align: center;
+    }
 
-    <p>Ми спеціалізуємося на розробці високоякісних програмних продуктів, веб-додатків, мобільних додатків та штучного інтелекту. Наші професіонали мають багаторічний досвід у сфері програмування та розробки інноваційних рішень.</p>
+    .contact-info {
+        text-align: center;
+    }
+</style>
 
-    <p>Наша команда працює в тісному співробітництві з клієнтами, враховуючи їх потреби та вимоги, щоб забезпечити найкращі результати. Ми пишаємося нашими досягненнями та задоволенням наших клієнтів.</p>
+<div class="about-container">
+    <h1 class="about-title">@ViewData["Title"]</h1>
 
-    <p>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою контактних даних, наведених нижче.</p>
+    <p class="about-text">
+        Основним завданням веб-застосунку є надання можливості користувачам вивчати та повторювати картки за допомогою техніки інтервальних повторень. 
+        Наш проект був розроблений трьома студентами третього курсу факультету прикладної математики та інформатики як навчальний університетський проект.
+    </p>
+
+    <p class="about-text">
+        У нашому веб-застосунку ви можете створювати власні набори карток для вивчення різних тем і предметів. Використовуючи метод інтервальних повторень, 
+        ми допоможемо вам оптимально розподілити час для повторення карток, щоб ефективно засвоїти матеріал.
+    </p>
+
+    <p class="about-text">
+        Наш веб-застосунок має зручний і інтуїтивно зрозумілий інтерфейс, що дозволяє швидко створювати, редагувати та видаляти картки та категорії.
+        Ми надаємо можливість зручного доступу до нашого веб-застосунку з будь-якого пристрою. 
+        Так ви зможете вчитися та повторювати картки в будь-який зручний для вас час і місце.
+    </p>
+
+    <p class="about-text">
+        Дякуємо вам за використання нашого веб-застосунку. Ми надіємося, що він буде корисним і допоможе вам у вивченні нових матеріалів, 
+        запам'ятовуванні важливої інформації та підвищенні вашої ефективності навчання.
+
+        Якщо у вас є будь-які питання, пропозиції або відгуки щодо нашого веб-застосунку, будь ласка, зв'яжіться з нами зв'яжіться з нами за допомогою контактної інформаці. Ми завжди готові покращувати наш продукт та надавати вам якісні послуги.
+
+        Дякуємо, що вибрали наш веб-застосунок і бажаємо вам успіхів у вашому навчанні!
+    </p>
+    
+    <p class="contact-info">
+        Зв'яжіться з нами за електронною адресою: <a href="mailto:pamjatayka@gmail.com">pamjatayka@gmail.com</a>
+    </p>
+
 </div>
